# Stakewell

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  netlify.toml  package.json  stake-and-earn-rewards-pool-master-prompt.md  wrangler.toml
.github/workflows/: ci.yml
contracts/rewards/: Cargo.toml
contracts/rewards/src/: lib.rs
contracts/rewards/test_snapshots/tests/: test_accrued_rewards_math.1.json  test_claim_rewards_increases_balance.1.json  test_no_double_pay.1.json  test_unstake_settles_accrual.1.json
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs
contracts/staking/test_snapshots/tests/: test_stake_locks_principal.1.json  test_unstake_exceeds_principal_fails.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
contracts/token/test_snapshots/tests/: test_mint_and_balance.1.json  test_symbol_and_decimals.1.json  test_transfer.1.json
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ActivityFeed.tsx  Dashboard.tsx  Orb3D.tsx  RewardsTicker.tsx  StakePanel.tsx  TxToast.tsx  WalletButton.tsx  WalletNotInstalled.tsx
frontend/lib/: contracts.ts  stellar.ts  wallet.ts
