[package]
name = "stakewell-staking"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.7", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils", "alloc"] }
stakewell-token = { path = "../token", features = ["testutils"] }
stakewell-rewards = { path = "../rewards", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
